<resources>
    <string name="app_name">Easy Library</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_Name">Last Name</string>
    <string name="email">Enter Your Email</string>
    <string name="location">House</string>
    <string name="phone_num">Enter Your Phone Number</string>
    <string name="click">change</string>
    <string name="back">back</string>
    <string name="submit">submit</string>
    <string name="pwd">Enter Password</string>
    <string name="cnfrmPWD">Confirm Password</string>
    <string name="search_bar_hint">Search Your Book</string>

</resources>
