<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:background="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_width="@dimen/emial_width"
        android:layout_height="@dimen/defualt_height"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sing_in_pwd"
        />

    <EditText
        android:id="@+id/sing_in_pwd"
        android:layout_width="@dimen/emial_width"
        android:layout_height="@dimen/defualt_height"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        />


    <Button
        android:id="@+id/sign_in"
        android:layout_width="@dimen/sign_in_up_button_width"
        android:layout_height="@dimen/sign_in_up_button_height"
        android:text="@string/sign_in"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/sing_in_pwd"

        />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="@dimen/sign_in_up_button_width"
        android:layout_height="@dimen/sign_in_up_button_height"
        android:text="@string/sign_up"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/sign_in"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sing_in_pwd"

        />

    <Button
        android:id="@+id/change"
        android:layout_width="@dimen/name_width"
        android:layout_height="@dimen/defualt_height"
        android:text="@string/click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

</android.support.constraint.ConstraintLayout>
